--- a/MobileProject/MobileProject/Info.plist
+++ b/MobileProject/MobileProject/Info.plist
@@ -301,6 +301,10 @@
 	<string>需要访问您的相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>需要访问您的相册</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>DIN-Medium.otf</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
