--- a/MobileProject/MobileProject/App/BaseModule/FMNetWork/NetWorkProtocol/ReleaseNetworkProtocol.plist
+++ b/MobileProject/MobileProject/App/BaseModule/FMNetWork/NetWorkProtocol/ReleaseNetworkProtocol.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>NetWorkProtocol_BaseURL</key>
-	<string>http://apiv.taodianbao.net</string>
+	<string>http://192.168.0.201:8080</string>
 </dict>
 </plist>
