招生海报功能完成

--- a/MobileProject/MobileProject/App/BaseModule/FMNetWork/NetWorkProtocol/ReleaseNetworkProtocol.plist
+++ b/MobileProject/MobileProject/App/BaseModule/FMNetWork/NetWorkProtocol/ReleaseNetworkProtocol.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>NetWorkProtocol_BaseURL</key>
-	<string>https://jk.ztjwsoft.com</string>
+	<string>https://jk.ztjwsoft.com/</string>
 </dict>
 </plist>
