--- a/MobileProject/MobileProject/App/BaseModule/FMNetWork/NetWorkProtocol/DebugNetworkProtocol.plist
+++ b/MobileProject/MobileProject/App/BaseModule/FMNetWork/NetWorkProtocol/DebugNetworkProtocol.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>NetWorkProtocol_BaseURL</key>
-	<string>https://test.ztjwsoft.com/</string>
+	<string>http://192.168.0.201:80/</string>
 </dict>
 </plist>
